finished form validation functions

--- a/index.html
+++ b/index.html
@@ -24,12 +24,12 @@
 
           <div class="input">
             <label for="password">Password:</label>
-            <input  max="15" min="8" name="password" type="text" id="password" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required />
+            <input  max="15" min="8" name="password" type="password" id="password" pattern="(?=^.{8,}$)((?=.*\d)|(?=.*\W+))(?![.\n])(?=.*[A-Z])(?=.*[a-z]).*$" required />
           </div>
 
           <div class="input">
             <label for="conf">Confirm Password:</label>
-            <input name="conf" type="text" id="conf" required />
+            <input name="conf" type="password" id="conf" required />
           </div>
 
           <div class="input">
